[package]
name = "ssl-checker-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bot"
path = "src/bot.rs"

[[bin]]
name = "cron"
path = "./src/cron.rs"

[dependencies]
redis = "0.24.0"
reqwest = "0.11.23"
ssl-expiration2 = "0.4.0"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10.0"
log = "0.4.17"
